Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-4312

Qt Creator crash when edit qml control properties with expression in designer mode.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • Qt Creator 2.2.0
    • Qt Creator 2.2.0
    • Quick Designer
    • None
    • [SDKTestRound3]
      Workstation platform: Mac X OS 10.6.7
      Qt Creator version: 2.1.81
    • 895442d65d8c0f30abd3ad41c702ccc3a9d0b806

    Description

      Steps:

      1. Open a qml file in designer mode.
      2. Select a qml control in control navigator window.
      3. Try to edit the position or size properties with expression.
      4. Input error expressions like "0ssddakkdfs001".
      5. Click "OK" button to ensure the input.
      ==> Qt creator crashed

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thohartm Thomas Hartmann
            yanghxia Yang Xiaoyong
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes