QmlDesigner.propertyEditor: crash fix for setting expressions

The problem was that the transaction was commited outside of the try {}
catch {} block (RAII)

1. I extended to the try block arround the fxObjectNode.setVariantProperty()
to avoid similar bugs
2. I force a commit of the transaction before leaving the try block

result:
If anything is wrong with the entered expression an exception is thrown
(like before) but now is is catched and we show a messagebox.

Reviewed-by: Kai Koehne
Task-number: QTCREATORBUG-4312